--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,19 +3,43 @@ name: ci
 
 on:
   push:
+    paths-ignore:
+      - 'EVIDENCE/**'
+      - 'README.md'
   pull_request:
+    paths-ignore:
+      - 'EVIDENCE/**'
+      - 'README.md'
+
+concurrency:
+  group: ci-${{ github.ref }}
+  cancel-in-progress: true
+
+permissions:
+  contents: read
+  actions: read
 
 jobs:
   build-test:
     runs-on: ubuntu-latest
+    strategy:
+      fail-fast: false
+      matrix:
+        python-version: ['3.11', '3.12']
+    timeout-minutes: 15
+    env:
+      PYTHONUNBUFFERED: "1"
     steps:
+      - name: Mask any incidental value (подстраховка)
+        run: echo "::add-mask::${{ secrets.SECRET_KEY }}"
+
       - name: Checkout
         uses: actions/checkout@v4
 
       - name: Setup Python
         uses: actions/setup-python@v5
-        with:
-          python-version: '3.11'
+        with: 
+          python-version: ${{ matrix.python-version }} 
 
       - name: Cache pip
         uses: actions/cache@v4
@@ -31,17 +55,27 @@ jobs:
       - name: Init DB
         run: python scripts/init_db.py
 
-      - name: Run tests
+      - name: Run tests with coverage
         run: |
           mkdir -p EVIDENCE/S08
-          pytest -q --junitxml=EVIDENCE/S08/test-report.xml
+          pytest -q --junitxml=EVIDENCE/S08/test-report.xml --cov=app --cov-report xml:EVIDENCE/S08/coverage.xml
         continue-on-error: false
+
+      - name: Secrets proof (DV2)
+        env:
+          SECRET_KEY: ${{ secrets.SECRET_KEY }}
+        run: |
+          if [ -z "${SECRET_KEY}" ]; then echo "secret present: no"; exit 1; fi
+          echo "secret present: yes" > EVIDENCE/S08/secrets-proof.txt
 
       - name: Upload artifacts
         if: always()
         uses: actions/upload-artifact@v4
         with:
-          name: evidence-s08
+          # name: evidence-s08
+          name : evidence-s08-py${{ matrix.python-version }}
           path: |
             EVIDENCE/S08/**
           if-no-files-found: warn
+          retention-days: 14
+        
